# CodeM

./: Cargo.toml  README.md
codem-client/: Cargo.toml
codem-client/src/: config.rs  error.rs  lib.rs
codem-client/src/client/: command.rs  file.rs  grep.rs  mod.rs
codem-client/src/client/read/: core.rs  list.rs  mod.rs
codem-client/src/client/write/: checks.rs  mod.rs  operations.rs
codem-client/src/error/: config_error.rs  grep_error.rs  mod.rs
codem-client/src/project/: mod.rs
codem-client/src/session/: id.rs  info.rs  mod.rs
codem-client/src/session/id/: words.rs
codem-client/src/session/manager/: metadata.rs  mod.rs  path.rs  session.rs
codem-client/src/tests/: client_tests.rs  common.rs  grep_test.rs  grep_tests.rs  mod.rs  run_command.rs  session_id_tests.rs  session_tests.rs
codem-client/src/tests/client/: mod.rs  read_tests.rs
codem-client/src/tests/list_directory_test/: basic.rs  mod.rs  pattern_match.rs
codem-client/src/tests/read_tests/: basic.rs  mod.rs  paths.rs  timestamp.rs
codem-client/src/types/: file_ops.rs  grep.rs  list.rs  mod.rs  read_ops.rs  session.rs  session_store.rs
codem-core/: Cargo.toml
codem-core/proptest-regressions/tests/: content_preservation_tests.txt  directory_prop_tests.txt  grep_prop_tests.txt  write_partial_prop_tests.txt
codem-core/proptest-regressions/tests/directory_tests/: listing_tests.txt
codem-core/proptest-regressions/tests/grep_prop_tests/: codebase_tests.txt
codem-core/src/: command.rs  directory.rs  error.rs  error_old.rs  fs_ops.rs  fs_read.rs  fs_write.rs  fs_write_large_partial.rs  fs_write_partial.rs  grep.rs  lib.rs  path_utils.rs  types.rs
codem-core/src/directory/: list.rs  list_new.rs  mod.rs  processor.rs  processor_new.rs  stats.rs
codem-core/src/error/: mod.rs
codem-core/src/fs_write_large_partial/: mod.rs  process.rs  result.rs  validation.rs
codem-core/src/fs_write_partial/: context.rs  find.rs  line_map.rs  mod.rs  process.rs  process_matches.rs
codem-core/src/grep/: mod.rs  processor.rs  search.rs
codem-core/src/tests/: basic_pattern_tests.rs  command_tests.rs  content_preservation_tests.rs  directory_prop_tests.rs  directory_tests.rs  fs_tests.rs  grep_prop_tests.rs  grep_tests.rs  line_number_tests.rs  mod.rs  nested_pattern_tests.rs  test_utils.rs  write_large_pattern_tests.rs  write_large_pattern_validation_tests.rs  write_large_tests.rs  write_partial_prop_tests.rs  write_tests.rs
codem-core/src/types/: command_types.rs  file_types.rs  grep_types.rs  mod.rs
codem-mcp/: Cargo.toml  config.toml  example.md  example.toml
codem-mcp/src/: config.rs  error.rs  main.rs  server.rs
codem-mcp/src/tests/: failing_test.rs  mod.rs  write_tests.rs
codem-mcp/src/tools/: files.rs  format.rs  grep.rs  handler.rs  handler_command.rs  handler_grep.rs  handler_read.rs  handler_write.rs  handler_write_small.rs  list.rs  mod.rs  read.rs  session.rs  tools_list.rs  types.rs
(+74 files in other folders)
