[package]
name = "codem-client"
version = "0.1.0"
edition = "2021"
description = "Client functionality for the codem code management tool"

[dependencies]
anyhow = "1.0.95"
codem-core = { path = "../codem-core" }
once_cell = "1.20.2"
parking_lot = "0.12.3"
rand = "0.8.5"
regex = "1.11.1"
rstest = "0.24.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "3.15.0"
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.19"
uuid = { version = "1.11.1", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0.95"
rstest = "0.24.0"
tempfile = "3.15.0"
