[package]
name = "codem-core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
wait-timeout = "0.2"
regex = "1.0"
anyhow = "1.0"
glob = "0.3.2"
tokio = { version = "1.43.0", features = ["full"] }
path-absolutize = "3.1.1"
error_set = "0.8.5"
aho-corasick = "1.1.3"

[dev-dependencies]
proptest = "1.6.0"
rstest = "0.24.0"
tempfile = "3.8"
tokio-test = "0.4.4"
