[package]
name = "codem-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
codem-client = { version = "0.1.0", path = "../codem-client" }
codem-core = { version = "0.1.0", path = "../codem-core" }
error_set = "0.8.5"
jsonrpc-stdio-server = "18.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["formatting"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"

[dev-dependencies]
rstest = "0.24.0"
tempfile = "3.15.0"
